--- a/style.css
+++ b/style.css
@@ -5,8 +5,7 @@
     height: 95vh;
 }
 
-.telaMinerios {     
-    display: flex;
+.telaMinerios {
     justify-content: center;
     height: 500px;
     width: 500px;
@@ -14,5 +13,22 @@
 }
 
 .minerio {
-    
+    margin: 25px 0px;
+    text-align: center;
+    font-size: 30px;
+}
+
+#minerioVida {
+    color: rgb(40, 194, 2);
+}
+
+#botaoMinerar {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+
+#minerar {
+    font-size: 50px;
 }
