--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 body {
     height: 95vh;
+    background-color: rgb(46, 46, 46);
 }
 
 header {
     display: flex;
     flex-direction: column;
     background-color: rgb(172, 172, 172);
-    width: 500px;
+    width: 100%;
     height: 70px;
     margin: auto;
     margin-bottom: 20px;
